--- a/about.html
+++ b/about.html
@@ -4,45 +4,79 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Обо мне — Анастасия</title>
-<meta name="description" content="Обо мне: портрет, путь, выставки и NFT.">
+<meta name="description" content="Обо мне: портрет, путь, выставки и NFT-альбом.">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
 <style>
-  :root{ --bg:#000; --text:#e9eaec; --muted:#9da0a6; --edge:#171717; --max:1300px; --radius:16px; }
+  :root{ --bg:#000; --text:#e9eaec; --muted:#9da0a6; --edge:#171717; --max:1300px; --radius:14px; }
   *{box-sizing:border-box} html{scroll-behavior:smooth}
   body{margin:0; background:var(--bg); color:var(--text); font-family:Inter, system-ui, -apple-system, Arial, sans-serif}
-  h1,h2{font-weight:800; letter-spacing:-.01em}
-  h2{font-size:clamp(22px,3.2vw,36px); margin:0 0 12px}
-  p{margin:0 0 10px; color:#d8dbe1}
+  h2{font-weight:800; letter-spacing:-.01em; font-size:clamp(22px,3.2vw,36px); margin:0 0 14px}
+  p{margin:0 0 10px; color:#d8dbe1; line-height:1.5}
 
+  /* мини-меню (всегда) */
   .minimenu{ position:fixed; left:14px; bottom:14px; z-index:30; display:flex; flex-direction:column; gap:6px;
     font-size:12px; letter-spacing:.08em; background:rgba(0,0,0,.5); backdrop-filter:blur(6px);
     padding:8px 10px; border-radius:10px; border:1px solid #111; }
   .minimenu a{ color:#cfcfd4; text-decoration:none }
 
   .wrap{ padding:64px 24px 110px; max-width:var(--max); margin:0 auto }
-  .about-hero{ display:grid; grid-template-columns:1fr 1fr; gap:28px; align-items:start }
-  .about-photo{ width:100%; aspect-ratio:3/4; object-fit:cover; background:#0b0b0b; border:1px solid var(--edge); border-radius:12px }
-  .about-intro{ padding-top:min(28vh, 55%); opacity:0; transform:translateY(30px); transition:opacity .7s ease, transform .7s ease }
-  .about-intro.show{ opacity:1; transform:translateY(0) }
-  .about-exhibits{ display:grid; grid-template-columns:1fr 1fr; gap:28px; margin-top:40px }
-  .thumbs{ display:grid; gap:12px }
-  .thumb{ position:relative; border:1px solid var(--edge); border-radius:12px; overflow:hidden; background:#0b0b0b; cursor:pointer; transform:translateZ(0) }
-  .thumb img{ width:100%; height:auto; display:block; object-fit:cover; transition:transform .35s ease }
-  .thumb:hover img{ transform:scale(1.04) }
-  .exhibit-text ul{ margin:10px 0 0 18px; color:#cfcfd4 }
-  @media (max-width:980px){
-    .about-hero{grid-template-columns:1fr}
-    .about-intro{padding-top:18px}
-    .about-exhibits{grid-template-columns:1fr}
+
+  /* ВЕРХ: фото слева, текст справа — по верхнему краю, ровно по сетке */
+  .about-hero{
+    display:grid;
+    grid-template-columns: 5fr 7fr; /* фото 5/12, текст 7/12 */
+    gap:40px; align-items:start;
+  }
+  .about-photo{
+    width:100%; aspect-ratio:3/4; object-fit:cover;
+    background:#0b0b0b; border:1px solid var(--edge); border-radius:12px;
+  }
+  .about-intro{display:flex; flex-direction:column; gap:10px}
+
+  /* НИЖЕ: «Выставки» — слева стопка из 3 превью, справа текст */
+  .exhibits{
+    margin-top:56px;
+    display:grid; grid-template-columns:5fr 7fr; gap:40px; align-items:start;
   }
 
-  /* Лайтбокс */
+  /* стопка превью (аккуратный «нахлёст») */
+  .stack{
+    position:relative; height:min(48vw, 420px); /* адаптивная высота */
+    max-width:520px; margin:0 auto 0 0;
+  }
+  .card{
+    position:absolute; top:0; left:0; width:78%; aspect-ratio:4/3;
+    border:1px solid var(--edge); border-radius:12px; overflow:hidden; background:#0b0b0b;
+    box-shadow:0 20px 60px rgba(0,0,0,.35);
+  }
+  .card img{width:100%; height:100%; object-fit:cover; display:block; transition:transform .35s ease}
+  .card:nth-child(1){ transform:rotate(-6deg) translate(-8px, 8px); z-index:1}
+  .card:nth-child(2){ transform:rotate(2deg)  translate(14px, 14px); z-index:2}
+  .card:nth-child(3){ transform:rotate(8deg)  translate(32px, 24px); z-index:3}
+  .stack:hover .card img{ transform:scale(1.04) }
+  .stack-note{position:absolute; bottom:-22px; left:0; font-size:12px; color:#9aa0a6}
+
+  .exhibit-text ul{ margin:10px 0 0 18px; color:#cfcfd4; line-height:1.5 }
+
+  @media (max-width:980px){
+    .about-hero{grid-template-columns:1fr}
+    .exhibits{grid-template-columns:1fr; gap:22px}
+    .stack{ position:static; height:auto; display:grid; grid-template-columns:1fr; gap:10px; max-width:none }
+    .card{ position:relative; width:100%; transform:none; aspect-ratio:4/3 }
+    .stack-note{ position:static; margin-top:6px }
+  }
+
+  /* Лайтбокс-альбом */
   .lightbox{ position:fixed; inset:0; display:none; place-items:center; background:rgba(0,0,0,.86); z-index:100 }
   .lightbox.open{ display:grid }
   .lb-inner{ position:relative; width:min(92vw,1200px) }
   .lb-img{ width:100%; background:#111; border:1px solid #1a1a1a; border-radius:14px; object-fit:contain }
   .lb-cap{ margin-top:8px; color:#cfd1d6; text-align:center; font-size:14px }
-  .lb-prev,.lb-next,.lb-close{ position:absolute; top:50%; transform:translateY(-50%); background:rgba(0,0,0,.4); color:#fff; border:1px solid #2a2a2a; padding:10px 12px; border-radius:10px; cursor:pointer }
+  .lb-prev,.lb-next,.lb-close{
+    position:absolute; top:50%; transform:translateY(-50%);
+    background:rgba(0,0,0,.4); color:#fff; border:1px solid #2a2a2a;
+    padding:10px 12px; border-radius:10px; cursor:pointer;
+  }
   .lb-prev{left:-6px} .lb-next{right:-6px}
   .lb-close{ top:-46px; right:0; transform:none }
   .lb-hint{ position:absolute; bottom:-32px; left:50%; transform:translateX(-50%); color:#8f9096; font-size:12px }
@@ -53,25 +87,28 @@
 <body>
 
 <main class="wrap">
-  <!-- верхний блок: слева фото, справа твой текст (без изменений) -->
-  <div class="about-hero">
+  <!-- верх: слева фото, справа твой текст (без изменений) -->
+  <section class="about-hero">
     <img class="about-photo" src="portrait.jpg" alt="Портрет Анастасии">
-    <div class="about-intro" id="aboutIntro">
+    <div class="about-intro">
       <h2>Обо мне</h2>
       <p>Привет, я Анастасия 👋 Я создаю визуальные истории с помощью ИИ и привычных графических инструментов, соединяя эстетику, технологии и атмосферу. Мой путь начался с классического дизайна и digital-арта, выставок в Дубае, Нью-Йорке, Японии и Европе. Сегодня мой фокус - новые форматы в ИИ-креативе: fashion-визуалы, 3D-аватары, клипы и проекты с ярким сторителлингом для брендов.</p>
       <p>Для меня важно, чтобы каждая работа была не просто картинкой или видео, а чем-то , что вызывает эмоции и запоминается. Я люблю эксперименты, ценю детали и верю, что технологии могут усиливать творчество, а не подменять его. Именно это я и делаю в своих проектах.</p>
     </div>
-  </div>
+  </section>
 
-  <!-- выставки и NFT: слева 3 миниатюры, справа описание -->
-  <section class="about-exhibits">
-    <div class="thumbs" id="thumbs">
-      <div class="thumb" data-idx="0"><img src="nft1.jpg" alt="Работа 1"></div>
-      <div class="thumb" data-idx="1"><img src="nft2.jpg" alt="Работа 2"></div>
-      <div class="thumb" data-idx="2"><img src="nft3.jpg" alt="Работа 3"></div>
+  <!-- ниже: «Выставки» — слева стопка превью, справа текст -->
+  <section class="exhibits">
+    <div>
+      <div class="stack" id="stack">
+        <div class="card" data-idx="0"><img src="nft1.jpg" alt="Работа 1"></div>
+        <div class="card" data-idx="1"><img src="nft2.jpg" alt="Работа 2"></div>
+        <div class="card" data-idx="2"><img src="nft3.jpg" alt="Работа 3"></div>
+        <div class="stack-note">Наведи / нажми — откроется альбом</div>
+      </div>
     </div>
     <div class="exhibit-text">
-      <h2>Путь и выставки</h2>
+      <h2>Выставки и NFT</h2>
       <p>Несколько лет строю визуальные миры с упором на атмосферу и ощутимую фактуру кадра. Выставлялась в Дубае, Нью-Йорке, Бали, Японии, Португалии. Работаю с брендами и артистами, собираю кампании без тяжёлой офлайн-съёмки.</p>
       <ul>
         <li>AI-контент: fashion, продуктовые сцены, нейро-портреты</li>
@@ -89,7 +126,7 @@
   <a href="index.html">главная</a>
 </nav>
 
-<!-- лайтбокс -->
+<!-- лайтбокс-альбом на 8 работ -->
 <div class="lightbox" id="lightbox">
   <div class="lb-inner">
     <button class="lb-close" id="lbClose" aria-label="Закрыть">×</button>
@@ -106,38 +143,49 @@
 </footer>
 
 <script>
-  // «выезд» текста при открытии страницы
-  window.addEventListener('DOMContentLoaded', ()=> {
-    setTimeout(()=> document.getElementById('aboutIntro')?.classList.add('show'), 150);
-    document.getElementById('year').textContent = new Date().getFullYear();
-  });
+  // год
+  document.getElementById('year').textContent = new Date().getFullYear();
 
-  // Лайтбокс
-  const thumbs = document.getElementById('thumbs');
+  // Галерея (8 фото)
+  const gallery = [
+    {src:'nft1.jpg', cap:'Работа 1 — описание/серия/год'},
+    {src:'nft2.jpg', cap:'Работа 2 — описание/серия/год'},
+    {src:'nft3.jpg', cap:'Работа 3 — описание/серия/год'},
+    {src:'nft4.jpg', cap:'Работа 4 — описание/серия/год'},
+    {src:'nft5.jpg', cap:'Работа 5 — описание/серия/год'},
+    {src:'nft6.jpg', cap:'Работа 6 — описание/серия/год'},
+    {src:'nft7.jpg', cap:'Работа 7 — описание/серия/год'},
+    {src:'nft8.jpg', cap:'Работа 8 — описание/серия/год'}
+  ];
+
+  const stack = document.getElementById('stack');
   const lb = document.getElementById('lightbox');
   const lbImg = document.getElementById('lbImg');
   const lbCap = document.getElementById('lbCap');
   const lbPrev = document.getElementById('lbPrev');
   const lbNext = document.getElementById('lbNext');
   const lbClose = document.getElementById('lbClose');
-
-  const gallery = [
-    {src:'nft1.jpg', cap:'Работа 1 — описание/серия/год'},
-    {src:'nft2.jpg', cap:'Работа 2 — описание/серия/год'},
-    {src:'nft3.jpg', cap:'Работа 3 — описание/серия/год'}
-  ];
   let gi = 0;
 
+  function renderLB(){ lbImg.src = gallery[gi].src; lbCap.textContent = gallery[gi].cap; }
   function openLB(i=0){ gi=i; renderLB(); lb.classList.add('open'); }
   function closeLB(){ lb.classList.remove('open'); }
   function prevLB(){ gi=(gi-1+gallery.length)%gallery.length; renderLB(); }
   function nextLB(){ gi=(gi+1)%gallery.length; renderLB(); }
-  function renderLB(){ lbImg.src = gallery[gi].src; lbCap.textContent = gallery[gi].cap; }
 
-  thumbs?.addEventListener('click', e=>{
-    const t = e.target.closest('.thumb'); if(!t) return;
-    openLB(Number(t.dataset.idx||0));
+  // открыть по наведению (десктоп) или по клику (тач/мобайл)
+  const prefersHover = window.matchMedia('(hover:hover) and (pointer:fine)').matches;
+  if (prefersHover) {
+    stack.addEventListener('mouseenter', (e)=>{
+      const t = e.target.closest('.card'); const idx = Number(t?.dataset.idx || 0);
+      openLB(idx);
+    });
+  }
+  stack.addEventListener('click', (e)=>{
+    const t = e.target.closest('.card'); const idx = Number(t?.dataset.idx || 0);
+    openLB(idx);
   });
+
   lbPrev.addEventListener('click', prevLB);
   lbNext.addEventListener('click', nextLB);
   lbClose.addEventListener('click', closeLB);
@@ -147,6 +195,19 @@
     if(e.key==='Escape') closeLB();
     if(e.key==='ArrowLeft') prevLB();
     if(e.key==='ArrowRight') nextLB();
+  });
+
+  // Плейсхолдеры, если превью нет
+  document.querySelectorAll('.card img').forEach(img=>{
+    img.addEventListener('error', ()=>{
+      const d = document.createElement('div');
+      d.style.display='grid'; d.style.placeItems='center';
+      d.style.width='100%'; d.style.height='100%';
+      d.style.background='linear-gradient(180deg,#0a0a0a,#111)';
+      d.style.color='#777'; d.style.fontSize='12px';
+      d.textContent = 'Добавьте '+img.getAttribute('src');
+      img.replaceWith(d);
+    }, {once:true});
   });
 </script>
 </body>
