--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,19 @@
   .minimenu a{ color:#cfcfd4; text-decoration:none }
 
   .wrap{ padding:64px 24px 110px; max-width:900px; margin:0 auto }
-  .contacts{display:grid; gap:12px; margin-top:12px}
-  .contacts a{display:block; padding:14px; border:1px solid #1a1a1a; border-radius:8px; text-align:center; background:#0b0b0b; color:#e9eaec}
 
-  /* слоган — ближе к середине страницы */
+  /* строки контактов с иконками и видимыми ID */
+  .contacts{ display:grid; gap:12px; margin-top:12px }
+  .contact-row{
+    display:flex; align-items:center; gap:12px;
+    padding:14px; border:1px solid #1a1a1a; border-radius:8px; background:#0b0b0b;
+  }
+  .icon{ width:22px; height:22px; display:inline-block; }
+  .handle a{ color:#e9eaec; text-decoration:none; font-weight:600 }
+
+  /* слоган — одна строка и ниже середины */
   .slogan-box{ height:45vh; display:grid; place-items:center; }
-  .contact-slogan{ text-align:center; color:#cfd1d6; max-width:28ch; font-weight:600; letter-spacing:.01em }
+  .contact-slogan{ white-space:nowrap; font-weight:600; letter-spacing:.01em; color:#cfd1d6 }
 
   .foot{ padding:30px 24px; border-top:1px solid var(--edge); color:#8c8d91; text-align:center; font-size:12px }
 </style>
@@ -33,11 +40,55 @@
 
 <main class="wrap">
   <h2>Контакты</h2>
+
   <div class="contacts">
-    <a href="https://www.instagram.com/imnotdiller" target="_blank" rel="noopener">Instagram @imnotdiller</a>
-    <a href="https://www.instagram.com/nadobroart_neuro" target="_blank" rel="noopener">Instagram @nadobroart_neuro</a>
-    <a href="https://t.me/nadobroart_neuro" target="_blank" rel="noopener">Telegram группа @nadobroart_neuro</a>
-    <a href="mailto:nadobroart@gmail.com">nadobroart@gmail.com</a>
+    <!-- Instagram @imnotdiller -->
+    <div class="contact-row">
+      <span class="icon" aria-hidden="true">
+        <!-- IG SVG -->
+        <svg viewBox="0 0 24 24" fill="none" width="22" height="22" xmlns="http://www.w3.org/2000/svg">
+          <rect x="3" y="3" width="18" height="18" rx="5" stroke="#e9eaec" stroke-width="1.5"/>
+          <circle cx="12" cy="12" r="4" stroke="#e9eaec" stroke-width="1.5"/>
+          <circle cx="17.5" cy="6.5" r="1" fill="#e9eaec"/>
+        </svg>
+      </span>
+      <span class="handle"><a href="https://www.instagram.com/imnotdiller" target="_blank" rel="noopener">@imnotdiller</a></span>
+    </div>
+
+    <!-- Instagram @nadobroart_neuro -->
+    <div class="contact-row">
+      <span class="icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" width="22" height="22" xmlns="http://www.w3.org/2000/svg">
+          <rect x="3" y="3" width="18" height="18" rx="5" stroke="#e9eaec" stroke-width="1.5"/>
+          <circle cx="12" cy="12" r="4" stroke="#e9eaec" stroke-width="1.5"/>
+          <circle cx="17.5" cy="6.5" r="1" fill="#e9eaec"/>
+        </svg>
+      </span>
+      <span class="handle"><a href="https://www.instagram.com/nadobroart_neuro" target="_blank" rel="noopener">@nadobroart_neuro</a></span>
+    </div>
+
+    <!-- Telegram группа -->
+    <div class="contact-row">
+      <span class="icon" aria-hidden="true">
+        <!-- TG SVG -->
+        <svg viewBox="0 0 24 24" fill="none" width="22" height="22" xmlns="http://www.w3.org/2000/svg">
+          <path d="M21 5L3 12l6 2 8-8-6 10v3l3-2" stroke="#e9eaec" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </span>
+      <span class="handle"><a href="https://t.me/nadobroart_neuro" target="_blank" rel="noopener">@nadobroart_neuro</a></span>
+    </div>
+
+    <!-- Email -->
+    <div class="contact-row">
+      <span class="icon" aria-hidden="true">
+        <!-- Mail SVG -->
+        <svg viewBox="0 0 24 24" fill="none" width="22" height="22" xmlns="http://www.w3.org/2000/svg">
+          <path d="M4 6h16v12H4z" stroke="#e9eaec" stroke-width="1.5"/>
+          <path d="M4 7l8 6 8-6" stroke="#e9eaec" stroke-width="1.5" stroke-linecap="round"/>
+        </svg>
+      </span>
+      <span class="handle"><a href="mailto:nadobroart@gmail.com">nadobroart@gmail.com</a></span>
+    </div>
   </div>
 
   <div class="slogan-box">
@@ -45,6 +96,7 @@
   </div>
 </main>
 
+<!-- мини-меню слева снизу -->
 <nav class="minimenu" aria-label="Мини-меню">
   <a href="about.html">обо мне</a>
   <a href="contact.html">контакты</a>
