--- a/about.html
+++ b/about.html
@@ -5,42 +5,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Обо мне — Анастасия</title>
 <meta name="description" content="Обо мне: портрет, путь, выставки и NFT-альбом.">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
   :root{ --bg:#000; --text:#e9eaec; --muted:#9da0a6; --edge:#171717; --max:1300px; --radius:14px; }
-  *{box-sizing:border-box}
-  html{scroll-behavior:smooth}
+  *{box-sizing:border-box} html{scroll-behavior:smooth}
   body{margin:0; background:var(--bg); color:var(--text); font-family:Inter, system-ui, -apple-system, Arial, sans-serif}
 
+  /* Заголовки — как есть (Inter), ТЕКСТЫ — Manrope */
   h2{font-weight:800; letter-spacing:-.01em; font-size:clamp(22px,3.2vw,36px); margin:0 0 14px}
-  p{margin:0 0 10px; color:#d8dbe1; line-height:1.55}
+  .bodytext{ font-family: Manrope, Inter, system-ui, -apple-system, Arial, sans-serif; }
+  .bodytext p, .bodytext li{ color:#d8dbe1; line-height:1.55 }
 
-  /* мини-меню (всегда) */
   .minimenu{ position:fixed; left:14px; bottom:14px; z-index:30; display:flex; flex-direction:column; gap:6px;
     font-size:12px; letter-spacing:.08em; background:rgba(0,0,0,.5); backdrop-filter:blur(6px);
     padding:8px 10px; border-radius:10px; border:1px solid #111; }
   .minimenu a{ color:#cfcfd4; text-decoration:none }
 
-  .wrap{ padding:64px 24px 110px; max-width:var(--max); margin:0 auto; }
+  .wrap{ padding:64px 48px 110px 72px; max-width:var(--max); margin:0 auto; }
 
-  /* Ряд 1: слева фото, справа текст (ровно по верхам) */
-  .row{ display:grid; grid-template-columns: 5fr 7fr; gap:40px; align-items:start; }
-  .photo{
-    width:100%; aspect-ratio:3/4; object-fit:cover; background:#0b0b0b;
-    border:1px solid var(--edge); border-radius:12px;
-  }
+  /* Ряд 1 */
+  .row{ display:grid; grid-template-columns:5fr 7fr; column-gap:72px; align-items:start }
+  .photo{ width:100%; aspect-ratio:3/4; object-fit:cover; background:#0b0b0b; border:1px solid var(--edge); border-radius:12px }
+  .right-col p, .right-col ul{max-width:60ch}
 
-  /* Ряд 2: слева кликабельный «значок альбома» (стопка), справа краткий текст */
-  .row-bottom{ margin-top:56px; display:grid; grid-template-columns:5fr 7fr; gap:40px; align-items:start; }
-
-  .stack{
-    position:relative; height:min(48vw, 420px); max-width:520px;
-  }
-  .card{
-    position:absolute; top:0; left:0; width:78%; aspect-ratio:4/3;
-    border:1px solid var(--edge); border-radius:12px; overflow:hidden; background:#0b0b0b;
-    box-shadow:0 20px 60px rgba(0,0,0,.35); cursor:pointer;
-  }
+  /* Ряд 2 */
+  .row-bottom{ margin-top:64px; display:grid; grid-template-columns:5fr 7fr; column-gap:72px; align-items:start }
+  .stack{ position:relative; height:min(48vw, 440px); max-width:560px; }
+  .card{ position:absolute; top:0; left:0; width:78%; aspect-ratio:4/3; border:1px solid var(--edge); border-radius:12px; overflow:hidden; background:#0b0b0b; box-shadow:0 20px 60px rgba(0,0,0,.35); cursor:pointer }
   .card img{width:100%; height:100%; object-fit:cover; display:block; transition:transform .35s ease}
   .card:nth-child(1){ transform:rotate(-6deg) translate(-8px, 8px); z-index:1}
   .card:nth-child(2){ transform:rotate(2deg)  translate(14px, 14px); z-index:2}
@@ -48,23 +39,25 @@
   .stack:hover .card img{ transform:scale(1.04) }
   .stack-note{position:absolute; bottom:-22px; left:0; font-size:12px; color:#9aa0a6}
 
-  .right-col p, .right-col ul{max-width:60ch}
-  .right-col ul{ margin:10px 0 0 18px; color:#cfcfd4; line-height:1.55 }
-
   @media (max-width:980px){
-    .row{grid-template-columns:1fr}
-    .row-bottom{grid-template-columns:1fr; gap:22px}
+    .wrap{ padding:32px 18px 90px 18px }
+    .row{ grid-template-columns:1fr; column-gap:0 }
+    .row-bottom{ grid-template-columns:1fr; column-gap:0; gap:22px }
     .stack{ position:static; height:auto; display:grid; grid-template-columns:1fr; gap:10px; max-width:none }
     .card{ position:relative; width:100%; transform:none }
     .stack-note{ position:static; margin-top:6px }
   }
 
-  /* Лайтбокс (только по клику) */
+  /* Лайтбокс */
   .lightbox{ position:fixed; inset:0; display:none; place-items:center; background:rgba(0,0,0,.86); z-index:100 }
   .lightbox.open{ display:grid }
   .lb-inner{ position:relative; width:min(92vw,1200px) }
-  .lb-img{ width:100%; background:#111; border:1px solid #1a1a1a; border-radius:14px; object-fit:contain }
-  .lb-cap{ margin-top:8px; color:#cfd1d6; text-align:center; font-size:14px }
+  .lb-img{ width:100%; background:#111; border:1px solid #1a1a1a; border-radius:14px; object-fit:contain; cursor:pointer }
+  .lb-title{ margin-top:10px; text-align:center; font-weight:800; letter-spacing:.005em } /* Inter — заголовок */
+  .lb-meta{ text-align:center; color:#cfd1d6; font-size:14px } /* Manrope для подписи? — оставим Inter для единообразия */
+  .lb-desc{ display:none; margin-top:8px; text-align:center; font-family: Manrope, Inter, system-ui, -apple-system, Arial, sans-serif; color:#d8dbe1; line-height:1.55 }
+  .lb-desc.show{ display:block }
+
   .lb-prev,.lb-next,.lb-close{
     position:absolute; top:50%; transform:translateY(-50%);
     background:rgba(0,0,0,.4); color:#fff; border:1px solid #2a2a2a;
@@ -73,24 +66,23 @@
   .lb-prev{left:-6px} .lb-next{right:-6px}
   .lb-close{ top:-46px; right:0; transform:none }
   .lb-hint{ position:absolute; bottom:-32px; left:50%; transform:translateX(-50%); color:#8f9096; font-size:12px }
-
   .foot{ padding:30px 24px; border-top:1px solid var(--edge); color:#8c8d91; text-align:center; font-size:12px }
 </style>
 </head>
 <body>
 
 <main class="wrap">
-  <!-- ряд 1: слева фото / справа «Обо мне» -->
+  <!-- Ряд 1 -->
   <section class="row">
     <img class="photo" src="portrait.jpg" alt="Портрет Анастасии">
-    <div class="right-col">
+    <div class="right-col bodytext">
       <h2>Обо мне</h2>
       <p>Привет, я Анастасия 👋 Я создаю визуальные истории с помощью ИИ и привычных графических инструментов, соединяя эстетику, технологии и атмосферу. Мой путь начался с классического дизайна и digital-арта, выставок в Дубае, Нью-Йорке, Японии и Европе. Сегодня мой фокус - новые форматы в ИИ-креативе: fashion-визуалы, 3D-аватары, клипы и проекты с ярким сторителлингом для брендов.</p>
       <p>Для меня важно, чтобы каждая работа была не просто картинкой или видео, а чем-то , что вызывает эмоции и запоминается. Я люблю эксперименты, ценю детали и верю, что технологии могут усиливать творчество, а не подменять его. Именно это я и делаю в своих проектах.</p>
     </div>
   </section>
 
-  <!-- ряд 2: слева «значок альбома», справа краткий текст (путь/выставки) -->
+  <!-- Ряд 2 -->
   <section class="row-bottom">
     <div>
       <div class="stack" id="stack">
@@ -101,9 +93,8 @@
       <div class="stack-note">Нажмите, чтобы открыть альбом (8 фото)</div>
     </div>
 
-    <div class="right-col">
+    <div class="right-col bodytext">
       <h2>Выставки и NFT</h2>
-      <!-- короткий блок под «путь по годам» — позже подставим реальные пункты -->
       <ul>
         <li><strong>2022–2023:</strong> первые AI-серии, NFT-релизы</li>
         <li><strong>2023–2024:</strong> показы: Дубай, Нью-Йорк, Япония, Европа</li>
@@ -113,22 +104,28 @@
   </section>
 </main>
 
-<!-- мини-меню слева снизу -->
 <nav class="minimenu" aria-label="Мини-меню">
   <a href="about.html">обо мне</a>
   <a href="contact.html">контакты</a>
   <a href="index.html">главная</a>
 </nav>
 
-<!-- лайтбокс-альбом (8 фото) -->
+<!-- Лайтбокс -->
 <div class="lightbox" id="lightbox">
   <div class="lb-inner">
     <button class="lb-close" id="lbClose" aria-label="Закрыть">×</button>
     <button class="lb-prev" id="lbPrev" aria-label="Назад">‹</button>
     <img class="lb-img" id="lbImg" src="" alt="">
     <button class="lb-next" id="lbNext" aria-label="Вперёд">›</button>
-    <div class="lb-cap" id="lbCap"></div>
-    <div class="lb-hint">Щёлкните по фону или Esc — закрыть</div>
+
+    <!-- Заголовок и мета -->
+    <div class="lb-title" id="lbTitle"></div>
+    <div class="lb-meta" id="lbMeta"></div>
+
+    <!-- Описание (Manrope), появляется по клику на картинку -->
+    <div class="lb-desc bodytext" id="lbDesc"></div>
+
+    <div class="lb-hint">Клик по изображению — описание · Esc / клик по фону — закрыть</div>
   </div>
 </div>
 
@@ -137,69 +134,55 @@
 </footer>
 
 <script>
-  // год
   document.getElementById('year').textContent = new Date().getFullYear();
 
-  // Альбом: только по клику, с надёжным закрытием
+  // Полные данные работ: Заголовок/Город/Год + описание
   const gallery = [
-    {src:'nft1.jpg', cap:'Работа 1 — описание/серия/год'},
-    {src:'nft2.jpg', cap:'Работа 2 — описание/серия/год'},
-    {src:'nft3.jpg', cap:'Работа 3 — описание/серия/год'},
-    {src:'nft4.jpg', cap:'Работа 4 — описание/серия/год'},
-    {src:'nft5.jpg', cap:'Работа 5 — описание/серия/год'},
-    {src:'nft6.jpg', cap:'Работа 6 — описание/серия/год'},
-    {src:'nft7.jpg', cap:'Работа 7 — описание/серия/год'},
-    {src:'nft8.jpg', cap:'Работа 8 — описание/серия/год'}
+    {src:'nft1.jpg', title:'Серия «Хром»,', city:'Дубай', year:'2023', desc:'Исследование отражающих поверхностей и неонового света в контексте урбан-мифологии.'},
+    {src:'nft2.jpg', title:'«Ветер внутри»,', city:'Токио', year:'2024', desc:'Гибридные портреты: смешение AI-рендеров и ручной пост-обработки.'},
+    {src:'nft3.jpg', title:'«Сон на плёнке»,', city:'Нью-Йорк', year:'2024', desc:'Имитация плёночных артефактов через генеративные шумы и зерно.'},
+    {src:'nft4.jpg', title:'«Эхо»,', city:'Лиссабон', year:'2024', desc:'Мягкая монохромная пластика, работа со звуковой волной как формой.'},
+    {src:'nft5.jpg', title:'«Грань мира»,', city:'Бали', year:'2023', desc:'Тропический сюр и жидкий металл в одном кадре.'},
+    {src:'nft6.jpg', title:'«Ligature»,', city:'Тбилиси', year:'2025', desc:'Связки шейпов и типографики в телесных текстурах.'},
+    {src:'nft7.jpg', title:'«Afterlight»,', city:'Париж', year:'2025', desc:'Переосмысление контражура и бликов как нарратива.'},
+    {src:'nft8.jpg', title:'«Zero Hour»,', city:'Берлин', year:'2025', desc:'Отчуждённые пространства и фигуры на стыке сна и архитектуры.'}
   ];
 
   const stack = document.getElementById('stack');
   const lb = document.getElementById('lightbox');
   const lbInner = lb.querySelector('.lb-inner');
   const lbImg = document.getElementById('lbImg');
-  const lbCap = document.getElementById('lbCap');
+  const lbTitle = document.getElementById('lbTitle');
+  const lbMeta = document.getElementById('lbMeta');
+  const lbDesc = document.getElementById('lbDesc');
   const lbPrev = document.getElementById('lbPrev');
   const lbNext = document.getElementById('lbNext');
   const lbClose = document.getElementById('lbClose');
   let gi = 0;
 
-  function renderLB(){ lbImg.src = gallery[gi].src; lbCap.textContent = gallery[gi].cap; }
+  function renderLB(){
+    const g = gallery[gi];
+    lbImg.src = g.src;
+    lbTitle.textContent = `${g.title} ${g.city} — ${g.year}`;
+    lbMeta.textContent = ''; // если захочешь — добавим длительность, тираж и т.п.
+    lbDesc.textContent = g.desc || '';
+    lbDesc.classList.remove('show');
+  }
   function openLB(i=0){ gi=i; renderLB(); lb.classList.add('open'); }
   function closeLB(){ lb.classList.remove('open'); }
-
   function prevLB(e){ gi=(gi-1+gallery.length)%gallery.length; renderLB(); if(e) e.stopPropagation(); }
   function nextLB(e){ gi=(gi+1)%gallery.length; renderLB(); if(e) e.stopPropagation(); }
 
-  // Открытие — ТОЛЬКО по клику на любую карточку
+  // Открытие по клику на стопку
   stack.addEventListener('click', (e)=>{
     const t = e.target.closest('.card'); if(!t) return;
-    const idx = Number(t.dataset.idx||0);
-    openLB(idx);
+    openLB(Number(t.dataset.idx||0));
   });
 
-  // Закрытие: крестик, фон, Esc, двойной клик
-  lbClose.addEventListener('click', (e)=>{ e.stopPropagation(); closeLB(); });
-  lb.addEventListener('click', (e)=>{ if(e.target === lb) closeLB(); });            // клик по фону
-  lb.addEventListener('dblclick', closeLB);
-  document.addEventListener('keydown', (e)=>{ if(lb.classList.contains('open') && e.key==='Escape') closeLB(); });
+  // Показ описания по клику на изображение
+  lbImg.addEventListener('click', ()=> lbDesc.classList.toggle('show'));
 
+  // Управление
   lbPrev.addEventListener('click', prevLB);
   lbNext.addEventListener('click', nextLB);
-
-  // Чтобы клики внутри контейнера не закрывали по фону
-  lbInner.addEventListener('click', (e)=> e.stopPropagation());
-
-  // Плейсхолдеры для отсутствующих изображений превью
-  document.querySelectorAll('.card img').forEach(img=>{
-    img.addEventListener('error', ()=>{
-      const d = document.createElement('div');
-      d.style.display='grid'; d.style.placeItems='center';
-      d.style.width='100%'; d.style.height='100%';
-      d.style.background='linear-gradient(180deg,#0a0a0a,#111)';
-      d.style.color='#777'; d.style.fontSize='12px';
-      d.textContent = 'Добавьте '+img.getAttribute('src');
-      img.replaceWith(d);
-    }, {once:true});
-  });
-</script>
-</body>
-</html>
+  lbClose.addEventListener('
